--- a/doc/main.tex
+++ b/doc/main.tex
@@ -2,14 +2,99 @@
 
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{geometry}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{mathrsfs}
 
-\title{}
+\usepackage{tikz}
+\usetikzlibrary{positioning}
+\usepackage{tikz-cd}
+
+
+\newcommand{\fonction}[5]{\begin{array}{l|rcl}
+#1: & #2 & \longrightarrow & #3 \\
+    & #4 & \longmapsto & #5 \end{array}}
+
+\title{AAQDD -- Abstract additive quantum decision diagrams}
 \author{M. Leroy, R. Vilmart}
 
 \begin{document}
 
 \maketitle
+
+\section{Formal definition}
+
+\subsection{Abstract states}
+
+The purpose of quantum decision diagrams is to provide a more efficient way to store and manipulate quantum states of a finite number of qubits. A $n$-qubit state is indeed traditionally represented as an element of $\mathbb{C}^{2^n}$ (with norm 1), which takes exponential space as $n$ grows. Abstract states will be in this part defined similarly, but with
+
+
+The standard definition of real intervals is:
+
+$$\forall a, b \in \mathbb{R}, [a, b]
+= \{x \in \mathbb{R} / \min(a, b) \le x \le \max(a, b)\}$$
+
+Those can be generalised to complex intervals, commonly using the cartesian notation. On that definiton, we can define sums and products:
+
+$$\forall x, y \in \mathbb{C}, [x, y]
+= \{a + ib ; a \in [\Re(x), \Re(y)], b \in [\Im(x), \Im(y)]\}$$
+
+Now let $\mathcal{A}_0 = \{[x, y] ; x, y \in \mathbb{C}\}$, we can now define basic operations.
+$$\forall \alpha, \beta \in \mathcal{A}_0, \alpha + \beta = \{a + b ; a \in \alpha, b \in \beta\}$$
+$$\forall \alpha, \beta \in \mathcal{A}_0, \alpha * \beta = \{a * b ; a \in \alpha, b \in \beta\}$$
+
+We now have intervals, \textit{abstract elements} of $\mathbb{C}$ represented in $\mathcal{A}_0$. Our abstract elements for a $n$-qubit quantum state would be in $\mathcal{A}_n = {\mathcal{A}_0}^{2^n}$ for all $n \in \mathbb{N}$. Defining a sum in $\mathcal{A}_n$, and an external product $\alpha * A$ for
+$\alpha \in \mathcal{A}_0$ and $A \in \mathcal{A}_n$, comes easily.
+
+\subsection{Decision diagrams}
+
+We inductively define abstract additive quantum decision diagrams, starting from zero-depth decision. The only kind of zero-depth decision diagram is:
+
+\begin{center}
+    % https://tikzcd.yichuanshen.de/#N4Igdg9gJgpgziAXAbVABwnAlgFyxMJZABgBpiBdUkANwEMAbAVxiRBAF9T1Nd9CUZAIxVajFmwA6kgEYQAHjCjAhHTqKUBzeEVAAzAE4QAtkjIgcEJEOr1mrRCGTTGaABZ1SAAmkyYOOgp1DiA
+    \begin{tikzcd}
+    {} \arrow[d, "{[x, x]} \in \mathcal{A}_0"] \\
+    \boxed{1}
+    \end{tikzcd}
+\end{center}
+
+Hence, we can define the set of zero-depth decision diagrams $\mathcal{D}_0 = \mathcal{A}_0$. Based on this, we can define inductively higher-depth decision diagrams. Let for every set $E$ be the set of finite subsets of $E$: $\mathscr{P}_f(E) = \{ A \subset E / |A| < \infty \}$. An AAQDD of depth $n+1$ is defined by:
+\begin{itemize}
+    \item An incoming abstract amplitude, an element of $\mathcal{A}_0$
+    \item A finite number of left children (diagrams of depth $n$), an element of $\mathscr{P}_f(\mathcal{D}_n)$
+    \item A finite number of right children (diagrams of depth $n$), an element of $\mathscr{P}_f(\mathcal{D}_n)$
+\end{itemize}
+
+Defining $\mathcal{D}_{n+1} = \mathcal{A}_0 \times \mathscr{P}_f(\mathcal{D}_n) \times \mathscr{P}_f(\mathcal{D}_n)$ thus comes naturally.
+
+\subsection{Diagram evaluation}
+
+Now that we defined our decision diagrams, we can evaluate them to get abstract elements. We inductively define our evaluation function for $n$ quibits $\mathcal{E}_n : \mathcal{D}_n \rightarrow \mathcal{A}_n$:
+
+$$\forall D \in \mathcal{D}_0, \mathcal{E}_0(D) = D$$
+
+$$\forall \alpha \in \mathcal{A}_0, \forall D, G \in \mathscr{P}_f(\mathcal{D}_n), \mathcal{E}_{n+1}(\alpha, D, G) =
+\begin{pmatrix}
+    \alpha * \sum(G)_0 \\
+    ... \\
+    \alpha * \sum(G)_{2^n - 1} \\
+    \alpha * \sum(D)_0 \\
+    ... \\
+    \alpha * \sum(D)_{2^n - 1} \\
+\end{pmatrix}
+\quad\text{with}
+$$
+
+$$\fonction{\sum}{\mathscr{P}_f(\mathcal{D}_n)}{\mathcal{A}_n}{G}{\displaystyle\sum_{g \in G} \mathcal{E}_n(g)}
+\quad\text{and as expected}$$
+
+$$\forall A = \begin{pmatrix}
+a_0 \\
+... \\
+a_{2^n - 1}
+\end{pmatrix} \in \mathcal{A}_n, \forall i  \in \{0, ..., 2^n - 1\}, A_i = a_i$$
+
+Since there is no risk of ambiguity, defining $\mathcal{E} : \bigcup \mathcal{D}_n \rightarrow \bigcup \mathcal{A}_n$ is not problematic. With this last function, we can now evaluate all our AAQDDs.
 
 \end{document}
